# purego-gen

./: .clang-format  .gitignore  AGENTS.md  DESIGN.md  Justfile  PUREGO.md  README.md  SQLITE3_TODO.md  TODO.md  ZIG_REWRITE_LIBS.md  build.zig  build.zig.zon  flake.nix  go.mod  lefthook.yml  libduckdb-bin.nix  nvfetcher.toml  pyproject.toml  result  treefmt.nix
.github/workflows/: ci.yml
_sources/: generated.json  generated.nix
cmd/internal/generator/: generated.go.gotmpl  generator.go
cmd/internal/libclang/: gen.go  gen_config.json  generated.go  libclang.go  libclang_test.go
cmd/purego-gen/: main.go  main_test.go
duckdb/: PUREGO.md  TODO.md  duckdb.go  duckdb_test.go
duckdb/duckdbsys/: chunk.go  config.json  db.go  ext.go  generated.go  load.go  prepared.go  raw.go  type.go  value.go
duckdb/internal/raw/: config.json  generated.go  raw.go
libload/: libload.go  libload_test.go  resolve.go
scripts/: __init__.py  check-golden.sh  check-tool-versions.sh  codex-orchestrate.sh  format-template-go.sh  golden-cases.json  golden-common.sh  golden_cases.py  golden_cases_lib.py  golden_cases_schema.py  inspect-target-library.py  inspect_target_library.py  update-go-fixture-placeholders.py  update-golden.sh  update_go_fixture_placeholders.py  uv-run-python-src.sh  zig_golden_cases.py
sqlite3/: TODO.md  sqlite3.go  sqlite3_test.go
sqlite3/internal/raw/: config.json  generated.go  raw.go
sqlite3/sqlite3sys/: bind_column.go  config.json  db.go  ext.go  ext_test.go  func.go  generated.go  load.go  raw.go
src/purego_gen/: __init__.py  __main__.py  abi_layout.py  c_type_utils.py  clang_collect.py  clang_extractor.py  clang_parser.py  clang_runtime.py  clang_type_mapping.py  clang_types.py  cli.py  cli_args.py  cli_invocation.py  config.py  config_load.py  config_model.py  config_normalize.py  config_schema.py  config_shared.py  constant_resolution.py  declaration_filters.py  diagnostic_codes.py  diagnostics.py  emit_kinds.py  generation_pipeline.py  generator_config.py  go_test_harness.py  helper_config.py  helper_rendering.py  identifier_utils.py  inspect_cmd.py  json_load.py  macro_constants.py  model.py  pkg_config.py  process_exec.py  render_context.py  renderer.py  target_profile.py  target_profile_schema.py  (+3 more)
src/purego_gen_e2e/: __init__.py  golden_cases_cli.py  golden_cases_config.py  golden_cases_lib.py  golden_cases_schema.py
src/purego_gen_zig/: callback_render.zig  clang.zig  config.zig  config_load.zig  ctype_resolver.zig  declarations.zig  go_generation.zig  golden_cases.zig  golden_check_main.zig  gotmpl.zig  inspect_detect.zig  inspect_filter.zig  macro_eval.zig  main.zig  output.zig  parser.zig  purego_gen.gotmpl  template_sections.zig  text_diff.zig  type_render.zig
templates/: go_file.go.j2
tests/: __init__.py  conftest.py  go.mod  import.go  stage1_golden_test.go  test_abi_layout.py  test_abi_model.py  test_c_type_utils.py  test_case_profile_uniqueness.py  test_clang_parser.py  test_cli.py  test_config_schema.py  test_diagnostics.py  test_go_fixture_layout.py  test_golden_cases.py  test_golden_layout.py  test_helper_rendering.py  test_identifier_utils.py  test_inspect_cmd.py  test_inspect_target_library_script.py  test_libzstd_harness.py  test_public_api.py  test_renderer.py  test_smoke.py  test_target_profile.py  test_type_mapping.py
tests/cases/abi_types/: abi_types.h  config.json  generated.go  profile.json
tests/cases/auto_string_return/: auto_string_return.h  config.json  generated.go
tests/cases/basic_and_categories/: categories.h  config.json  generated.go  profile.json
tests/cases/basic_func_type/: config.json  generated.go  profile.json
tests/cases/basic_type_strict_opaque/: config.json  generated.go  profile.json
tests/cases/bool_param/: bool_param.h  config.json  generated.go
tests/cases/buffer_input_helper/: buffer_input_helper.h  config.json  generated.go  runtime_test.go
tests/cases/buffer_input_multi_pair/: buffer_input_multi_pair.h  config.json  generated.go
tests/cases/buffer_input_pattern/: buffer_input_pattern.h  config.json  generated.go
tests/cases/buffer_wrapper_typedef_callback_passthrough/: buffer_wrapper_typedef_callback_passthrough.h  config.json  generated.go
tests/cases/by_value_records/: config.json  generated.go  profile.json
tests/cases/callback_auto_discover/: callback_auto_discover.h  config.json  generated.go
tests/cases/callback_param/: callback_param.h  config.json  generated.go
tests/cases/callback_param_conflict/: callback_param_conflict.h  config.json  generated.go
tests/cases/callback_param_dedup/: callback_param_dedup.h  config.json  generated.go
tests/fixtures/: abi_probe_abi_types.c  abi_probe_sample_m3_types.c  abi_types.h  basic.h  broken_header.h  buffer_input_helper.h  by_value_records.h  callback_candidates.h  function_signatures.h  go.mod  macro_constants.h  missing_runtime_var.h  missing_symbol.h  sample.h  sample_categories.h  sample_conditional.h  sample_m3_types.h  smoke_runtime.c  smoke_runtime.h  smoke_string_runtime.c  unsigned_char_strings.h
tests/golden/: libzstd_core.go  sample_conditional_off.go  sample_conditional_on.go  sample_const.go  sample_func_type.go  sample_m3_types.go  sample_mixed_filtered.go  sample_multi_headers.go
tests/helper/: __init__.py  go_test_harness.py  stdout_assertions.py
tests/testruntime/: runtime_library.go
typings/clang/: __init__.pyi  cindex.pyi
(+231 files in other folders)
