[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purego-gen"
version = "0.0.0"
description = "Practical C-header-to-purego binding generator"
requires-python = ">=3.14"
dependencies = [
  "annotated-types>=0.7.0,<1",
  "clang>=21.1.7",
  "jinja2>=3.1.6,<4",
  "pydantic>=2,<3",
]

[project.scripts]
purego-gen = "purego_gen.cli:main"
golden-cases = "purego_gen_e2e.golden_cases_cli:main"

[dependency-groups]
dev = [
  "basedpyright>=1.31.2,<2",
  "djlint>=1.36.4,<2",
  "pyrefly>=0.18.0,<1",
  "pytest>=9,<10",
  "ruff>=0.12.11,<1",
]

[tool.uv]
package = false

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests", "typings"]
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["src", "tests", "scripts", "typings"]
extraPaths = ["src", "scripts"]
exclude = [
  ".direnv",
  ".git",
  ".venv",
  "build",
  "dist",
]
analyzeUnannotatedFunctions = true
deprecateTypingAliases = true
enableTypeIgnoreComments = false
strictDictionaryInference = true
strictListInference = true
strictSetInference = true
reportAny = "error"
reportExplicitAny = "error"
reportMissingTypeStubs = true
reportUnnecessaryTypeIgnoreComment = "error"

[tool.pyrefly]
project-includes = ["src/**/*.py", "tests/**/*.py", "scripts/**/*.py", "typings/**/*.pyi"]
project-excludes = [".git/**", ".venv/**", "build/**", "dist/**"]
search-path = ["src", "tests", "scripts", "typings"]
python-version = "3.14"
ignore-errors-in-generated-code = false
untyped-def-behavior = "check-and-infer-return-type"
enabled-ignores = ["type", "pyrefly"]
use-ignore-files = false
infer-with-first-use = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.djlint]
profile = "jinja"
